# lab_2

./: CMakeLists.txt
src/: box_filter.cpp
